--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -357,6 +357,7 @@ h6 {
         visibility: hidden;
         left: 14px;
         top: 130%;
+
         opacity: 0;
         transition: 0.3s;
         border-radius: 4px;
@@ -382,7 +383,7 @@ h6 {
     .navmenu .dropdown ul a:hover,
     .navmenu .dropdown ul .active:hover,
     .navmenu .dropdown ul li:hover>a {
-        color: var(--nav-dropdown-hover-color);
+        color: #00187B;
     }
 
     .navmenu .dropdown:hover>ul {
@@ -694,7 +695,7 @@ h6 {
     right: 15px;
     bottom: 15px;
     z-index: 99999;
-    background-color: var(--accent-color);
+    background-color: #00187C;
     width: 40px;
     height: 40px;
     border-radius: 4px;
@@ -875,7 +876,7 @@ section,
     padding-top: 30px;
     padding-bottom: 30px;
     margin-bottom: 50px;
-    border-top: 4px solid var(--accent-color);
+    border-top: 4px solid #FFEE74;
     z-index: 3;
 }
 
